# shader-system

./: .gitignore  CMakeLists.txt  Music.cpp  README.md  ShaderSystemConfig.h.in  T500.txt  X61.txt  X61_64.txt  configuration.json  main.cpp
.github/workflows/: cmake.yml  main.yml
assets/shaders/: fragment.frag  fragment.glsl  fragment_post.frag  fragment_post.glsl  vertex_post.glsl
include/: Camera.h  Common.h  Configuration.h  Cosmonaut.h  DynamicTexture.h  Framebuffer.h  Graphics.h  Helpers.h  InputDevices.h  Keyboard.h  Logger.h  Music.h  Resource.h  ResourceManager.h  Shader.h  StaticTexture.h  Synchronizer.h  Texture.h  TextureManager.h  Textures.h  Variable.h  Vector3.h
libs/: Configuration.cpp  Cosmonaut.cpp  Music.cpp  loadsave.c  loadsave.h  lodepng.cpp  lodepng.h
libs/rocket/: TrackData.h
shaders/: fragment.glsl  post_fragment.glsl  post_vertex.glsl
src/: Camera.cpp  Configuration.cpp  Cosmonaut.cpp  DynamicTexture.cpp  Framebuffer.cpp  Graphics.cpp  Helpers.cpp  InputDevices.cpp  Keyboard.cpp  Logger.cpp  Music.cpp  Resource.cpp  ResourceManager.cpp  Shader.cpp  StaticTexture.cpp  Synchronizer.cpp  Texture.cpp  TextureManager.cpp  Textures.cpp  Vector3.cpp
